finished for now

--- a/fixtures.yaml
+++ b/fixtures.yaml
@@ -142,366 +142,27 @@
     change_message: '[{"changed": {"name": "song", "object": "Smile", "fields": ["Audio"]}},
       {"changed": {"name": "song", "object": "Devided", "fields": ["Audio"]}}, {"changed":
       {"name": "song", "object": "Vanitas", "fields": ["Audio"]}}]'
-- model: auth.permission
-  pk: 1
-  fields:
-    name: Can add log entry
-    content_type: 1
-    codename: add_logentry
-- model: auth.permission
-  pk: 2
-  fields:
-    name: Can change log entry
-    content_type: 1
-    codename: change_logentry
-- model: auth.permission
-  pk: 3
-  fields:
-    name: Can delete log entry
-    content_type: 1
-    codename: delete_logentry
-- model: auth.permission
-  pk: 4
-  fields:
-    name: Can view log entry
-    content_type: 1
-    codename: view_logentry
-- model: auth.permission
-  pk: 5
-  fields:
-    name: Can add permission
-    content_type: 2
-    codename: add_permission
-- model: auth.permission
-  pk: 6
-  fields:
-    name: Can change permission
-    content_type: 2
-    codename: change_permission
-- model: auth.permission
-  pk: 7
-  fields:
-    name: Can delete permission
-    content_type: 2
-    codename: delete_permission
-- model: auth.permission
-  pk: 8
-  fields:
-    name: Can view permission
-    content_type: 2
-    codename: view_permission
-- model: auth.permission
-  pk: 9
-  fields:
-    name: Can add group
-    content_type: 3
-    codename: add_group
-- model: auth.permission
-  pk: 10
-  fields:
-    name: Can change group
-    content_type: 3
-    codename: change_group
-- model: auth.permission
-  pk: 11
-  fields:
-    name: Can delete group
-    content_type: 3
-    codename: delete_group
-- model: auth.permission
-  pk: 12
-  fields:
-    name: Can view group
-    content_type: 3
-    codename: view_group
-- model: auth.permission
-  pk: 13
-  fields:
-    name: Can add user
-    content_type: 4
-    codename: add_user
-- model: auth.permission
+- model: admin.logentry
   pk: 14
   fields:
-    name: Can change user
-    content_type: 4
-    codename: change_user
-- model: auth.permission
+    action_time: 2023-01-29 20:30:59.052202+00:00
+    user: 1
+    content_type: 16
+    object_id: '1'
+    object_repr: Gallery object (1)
+    action_flag: 2
+    change_message: '[{"changed": {"fields": ["Gallery image"]}}]'
+- model: admin.logentry
   pk: 15
   fields:
-    name: Can delete user
-    content_type: 4
-    codename: delete_user
-- model: auth.permission
-  pk: 16
-  fields:
-    name: Can view user
-    content_type: 4
-    codename: view_user
-- model: auth.permission
-  pk: 17
-  fields:
-    name: Can add content type
-    content_type: 5
-    codename: add_contenttype
-- model: auth.permission
-  pk: 18
-  fields:
-    name: Can change content type
-    content_type: 5
-    codename: change_contenttype
-- model: auth.permission
-  pk: 19
-  fields:
-    name: Can delete content type
-    content_type: 5
-    codename: delete_contenttype
-- model: auth.permission
-  pk: 20
-  fields:
-    name: Can view content type
-    content_type: 5
-    codename: view_contenttype
-- model: auth.permission
-  pk: 21
-  fields:
-    name: Can add session
-    content_type: 6
-    codename: add_session
-- model: auth.permission
-  pk: 22
-  fields:
-    name: Can change session
-    content_type: 6
-    codename: change_session
-- model: auth.permission
-  pk: 23
-  fields:
-    name: Can delete session
-    content_type: 6
-    codename: delete_session
-- model: auth.permission
-  pk: 24
-  fields:
-    name: Can view session
-    content_type: 6
-    codename: view_session
-- model: auth.permission
-  pk: 25
-  fields:
-    name: Can add about me
-    content_type: 7
-    codename: add_aboutme
-- model: auth.permission
-  pk: 26
-  fields:
-    name: Can change about me
-    content_type: 7
-    codename: change_aboutme
-- model: auth.permission
-  pk: 27
-  fields:
-    name: Can delete about me
-    content_type: 7
-    codename: delete_aboutme
-- model: auth.permission
-  pk: 28
-  fields:
-    name: Can view about me
-    content_type: 7
-    codename: view_aboutme
-- model: auth.permission
-  pk: 29
-  fields:
-    name: Can add background images
+    action_time: 2023-01-29 20:41:43.050333+00:00
+    user: 1
     content_type: 8
-    codename: add_backgroundimages
-- model: auth.permission
-  pk: 30
-  fields:
-    name: Can change background images
-    content_type: 8
-    codename: change_backgroundimages
-- model: auth.permission
-  pk: 31
-  fields:
-    name: Can delete background images
-    content_type: 8
-    codename: delete_backgroundimages
-- model: auth.permission
-  pk: 32
-  fields:
-    name: Can view background images
-    content_type: 8
-    codename: view_backgroundimages
-- model: auth.permission
-  pk: 33
-  fields:
-    name: Can add contact
-    content_type: 9
-    codename: add_contact
-- model: auth.permission
-  pk: 34
-  fields:
-    name: Can change contact
-    content_type: 9
-    codename: change_contact
-- model: auth.permission
-  pk: 35
-  fields:
-    name: Can delete contact
-    content_type: 9
-    codename: delete_contact
-- model: auth.permission
-  pk: 36
-  fields:
-    name: Can view contact
-    content_type: 9
-    codename: view_contact
-- model: auth.permission
-  pk: 37
-  fields:
-    name: Can add songs
-    content_type: 10
-    codename: add_songs
-- model: auth.permission
-  pk: 38
-  fields:
-    name: Can change songs
-    content_type: 10
-    codename: change_songs
-- model: auth.permission
-  pk: 39
-  fields:
-    name: Can delete songs
-    content_type: 10
-    codename: delete_songs
-- model: auth.permission
-  pk: 40
-  fields:
-    name: Can view songs
-    content_type: 10
-    codename: view_songs
-- model: auth.permission
-  pk: 41
-  fields:
-    name: Can add subtitle
-    content_type: 11
-    codename: add_subtitle
-- model: auth.permission
-  pk: 42
-  fields:
-    name: Can change subtitle
-    content_type: 11
-    codename: change_subtitle
-- model: auth.permission
-  pk: 43
-  fields:
-    name: Can delete subtitle
-    content_type: 11
-    codename: delete_subtitle
-- model: auth.permission
-  pk: 44
-  fields:
-    name: Can view subtitle
-    content_type: 11
-    codename: view_subtitle
-- model: auth.permission
-  pk: 45
-  fields:
-    name: Can add background image
-    content_type: 12
-    codename: add_backgroundimage
-- model: auth.permission
-  pk: 46
-  fields:
-    name: Can change background image
-    content_type: 12
-    codename: change_backgroundimage
-- model: auth.permission
-  pk: 47
-  fields:
-    name: Can delete background image
-    content_type: 12
-    codename: delete_backgroundimage
-- model: auth.permission
-  pk: 48
-  fields:
-    name: Can view background image
-    content_type: 12
-    codename: view_backgroundimage
-- model: auth.permission
-  pk: 49
-  fields:
-    name: Can add album
-    content_type: 13
-    codename: add_album
-- model: auth.permission
-  pk: 50
-  fields:
-    name: Can change album
-    content_type: 13
-    codename: change_album
-- model: auth.permission
-  pk: 51
-  fields:
-    name: Can delete album
-    content_type: 13
-    codename: delete_album
-- model: auth.permission
-  pk: 52
-  fields:
-    name: Can view album
-    content_type: 13
-    codename: view_album
-- model: auth.permission
-  pk: 53
-  fields:
-    name: Can add song
-    content_type: 14
-    codename: add_song
-- model: auth.permission
-  pk: 54
-  fields:
-    name: Can change song
-    content_type: 14
-    codename: change_song
-- model: auth.permission
-  pk: 55
-  fields:
-    name: Can delete song
-    content_type: 14
-    codename: delete_song
-- model: auth.permission
-  pk: 56
-  fields:
-    name: Can view song
-    content_type: 14
-    codename: view_song
-- model: auth.permission
-  pk: 57
-  fields:
-    name: Can add gallery image
-    content_type: 15
-    codename: add_galleryimage
-- model: auth.permission
-  pk: 58
-  fields:
-    name: Can change gallery image
-    content_type: 15
-    codename: change_galleryimage
-- model: auth.permission
-  pk: 59
-  fields:
-    name: Can delete gallery image
-    content_type: 15
-    codename: delete_galleryimage
-- model: auth.permission
-  pk: 60
-  fields:
-    name: Can view gallery image
-    content_type: 15
-    codename: view_galleryimage
+    object_id: '1'
+    object_repr: Background Images
+    action_flag: 2
+    change_message: '[{"added": {"name": "background image", "object": "BackgroundImage
+      object (4)"}}]'
 - model: auth.user
   pk: 1
   fields:
@@ -517,81 +178,6 @@
     date_joined: 2022-07-03 14:01:04.819670+00:00
     groups: []
     user_permissions: []
-- model: contenttypes.contenttype
-  pk: 1
-  fields:
-    app_label: admin
-    model: logentry
-- model: contenttypes.contenttype
-  pk: 2
-  fields:
-    app_label: auth
-    model: permission
-- model: contenttypes.contenttype
-  pk: 3
-  fields:
-    app_label: auth
-    model: group
-- model: contenttypes.contenttype
-  pk: 4
-  fields:
-    app_label: auth
-    model: user
-- model: contenttypes.contenttype
-  pk: 5
-  fields:
-    app_label: contenttypes
-    model: contenttype
-- model: contenttypes.contenttype
-  pk: 6
-  fields:
-    app_label: sessions
-    model: session
-- model: contenttypes.contenttype
-  pk: 7
-  fields:
-    app_label: website
-    model: aboutme
-- model: contenttypes.contenttype
-  pk: 8
-  fields:
-    app_label: website
-    model: backgroundimages
-- model: contenttypes.contenttype
-  pk: 9
-  fields:
-    app_label: website
-    model: contact
-- model: contenttypes.contenttype
-  pk: 10
-  fields:
-    app_label: website
-    model: songs
-- model: contenttypes.contenttype
-  pk: 11
-  fields:
-    app_label: website
-    model: subtitle
-- model: contenttypes.contenttype
-  pk: 12
-  fields:
-    app_label: website
-    model: backgroundimage
-- model: contenttypes.contenttype
-  pk: 13
-  fields:
-    app_label: website
-    model: album
-- model: contenttypes.contenttype
-  pk: 14
-  fields:
-    app_label: website
-    model: song
-- model: contenttypes.contenttype
-  pk: 15
-  fields:
-    app_label: website
-    model: galleryimage
 - model: sessions.session
   pk: 8jb5csfmpxl3j8qkwv914abcevnkfe48
   fields:
@@ -625,6 +211,11 @@
   fields:
     background_images: 1
     background_image: cover_images/background1_H8gR9Wo.jpg
+- model: website.backgroundimage
+  pk: 4
+  fields:
+    background_images: 1
+    background_image: cover_images/tomik1_1ALa8tO.jpg
 - model: website.aboutme
   pk: 1
   fields:
@@ -672,6 +263,11 @@
   fields:
     album_name: CAIN PROBLEM
     description: My newest album lorem work ipsum tipsum.
+- model: website.gallery
+  pk: 1
+  fields:
+    gallery_image: cover_images/tomik1_1RdA6RQ.jpg
+    description: ''
 - model: website.song
   pk: 1
   fields:
@@ -702,9 +298,3 @@
     facebook_link: https://www.facebook.com/tomas.morgan.927
     instagram_link: https://www.instagram.com/tomas_s_morgan/
     soundcloud_link: https://soundcloud.com/user-524027543
-
-- model: website.gallery
-  pk: 1
-  fields:
-    gallery_image: cover_images/background1_ST5iJsl.jpg
-    description: "Some description"
